--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gifted-chat": "^2.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-tinder-card": "^1.6.2"
