--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-spring/native": "^9.5.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@stomp/stompjs": "^7.0.0",
     "expo": "~47.0.8",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
@@ -26,7 +27,9 @@
     "react-native-gifted-chat": "^2.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-tinder-card": "^1.6.2"
+    "react-tinder-card": "^1.6.2",
+    "sockjs-client": "^1.6.1",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
