--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@rneui/base|react-tinder-card)"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
@@ -22,11 +29,14 @@
     "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
+    "jest": "^26.6.3",
+    "jest-expo": "^48.0.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gifted-chat": "^2.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-test-renderer": "^18.1.0",
     "react-tinder-card": "^1.6.2",
     "sockjs-client": "^1.6.1",
     "text-encoding": "^0.7.0"
